--- a/q/274951.html
+++ b/q/274951.html
@@ -26,14 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>1252</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>1209</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
 <tr d-ix="1"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
 <tr d-ix="2"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 <tr d-ix="3"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>1303</s> 1252 bytes</h1>
-<pre><code>s/^0$/0/;s/^1$/1/;tz
-x;s/^/0001/;x
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>1303</s> <s>1252</s> 1209 bytes</h1>
+<pre><code>/^(0|1)$/bz;x;s/^/0001/;x
 :a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
 G;s/(.*)\n(.*)/\2\n\1/
 :b;y/10/ab/;G;s/\n//2
@@ -41,22 +40,21 @@ G;s/(.*)\n(.*)/\2\n\1/
 h;s/\n.*//;s/^/\n\n/
 :d;s/\n/#&amp;/
 :e;s/^([&lt;0-9]*)#/\1&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;te
-s/\n((\[ab]\{\&amp;})*)\n/\n\1[ab]{\&amp;}\n/
-s/(.*)\n(.*)\n(.*)/sed 's%.*%\2%;i\3\\n\1'&lt;&lt;&lt;'\1'/e
-s//sed -r 's%^\3$%\&amp;\\n\2%;t;i\2\\n\3\n:'&lt;&lt;&lt;'\1'/e
-T;s/\{[0-9]+}/{\&amp;}/g;td
+s/\n/.{1}&amp;/2
+s/\{[0-9]*}/!/g;tk;:k;s/([0-9]*)(.*)!/\1\2{\1}/;tk
+s/(.*)\n(.*)\n(.*)/sed -r 's%^\2$%\&amp;\\n\1%;t;i\1\\n\2\n:'&lt;&lt;&lt;'\3'/e
+/\n.*\n/td
 :f;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tf;s/0//g
 s/(#+)\1/\1/
 :g;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;tg
 s/(.*)\n(.*)/sed -r 's%.{\2}%\&amp;\\n%g;i\2'&lt;&lt;&lt;'\1'/e
 :h;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;th;s/0//g
-s/#+/&amp;&amp;/
+s/#+/&amp;&amp;#/
 :i;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;ti
-s/([0-9]+)\n(.*)/sed -z 's%\\n%\\n\\n\\n%\1'&lt;&lt;&lt;'\2'/e
-s/.*/sed '2~2d'&lt;&lt;&lt;'&amp;';sed '1~2d'&lt;&lt;&lt;'&amp;'/e
+s/([0-9]+)\n(.*)/sed '\1i\\\\n\\n'&lt;&lt;&lt;'\2'/e
+s/.*/sed -n '1~2H;2~2p;${x;p}'&lt;&lt;&lt;'&amp;'/e
 s/(.)\n/\1/g;y/\n/ /;G;s/\n[ba]*\n/ /
-/[ab]{2,}/bc
-h;s/\n.*//;s/[ab]/&amp; /g;y/ /\n/
+/[ab]{2,}/bc;h;s/\n.*//;s/[ab]/&amp; /g;y/ /\n/
 :j;s/b\nb/b/;s/b\na/a/;s/a\nb/a/;s/a\na/aa/;tj
 /^\n*a*\n*$/!s/.*/sed -rn 'h;sa.aa;x;:;sa.*a\&amp;amp;T;x;sa.aa;x;t'&lt;&lt;&lt;'&amp;'/e
 s/\n(\n*)/\1/g;/\n/bj
@@ -69,13 +67,33 @@ y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
 :;G;s/\n.*\n/\n/;h;s/\n.*//;x;bb
 :z
 </code></pre>
-<p><a href="https://tio.run/##lVRNb@IwEL37V2QVEhKzZGxDd5c46nX/ALcYJLtQPqRNK8ghBbE/fdkZp2nDrUgoTMZvZt6bGee4Xl0bfdLN9QhLMQABGg05AAm6PrGG3kAIga8Nyy2@lnI8W0Acwka/gVST6cOPn79mIDqTEoQCZiEmILwA2LDfaCQZT01FTzDKVEYCyx3lEGAdaIKYCkCx/KlDu6S0bnFW3y9kBz4@7OInRuJzCmzrIzMOnjuamIblqzZfGKO9poOkLARS52kIRhbFB/VQyEfwFdMi40ZihSzN@CNWQQlrRmmSxBATczbxJSUaVEV6cuihen197yqP61UwPEYZj4yK9A4JU9CwKIoh/gFl9pjxgWBLMxlEJiYMomvEK@NVVnkvZE6qziUJGV2AiuMc6hXLn@8czXM3GiQejlKchh/IhiDw5e5sbnT31GRnoy6tnGhDWnoa8u2dXLefXMMRxDTR3X08d8Sz7doN1xNxJY7Uav@LugmpdkK4Vn6O6q9a@YN4qL1Dfjo8EAvTWkgvCK2gW@nS2QX3DgbdOoN7ul1bOoA48MEB@AXeo9uZyoGD1rJgybLk6yz0oVnvGSxNxS3W4QP49kF7fKiCIRaymbW60TlZ3JrY/nnVc3R0B3VfCTYI06StFuLi9uwNK4aeB3S6sndRc3@58FoG2PVSSLxhg7brJxoSD4Buh0f0jv0HQPd6MEeQFIlAlCSIkAiirxD1Fr2C3BgoWycuTfuxwuA49jvR54W/fvJGO8fy0/UqmGSKTdiUPfx7ea13L9XxOj78Bw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##lVNNc5swEL3rVyiDjQ1pWAknbYM8OXWmOXSml9yseEbYCsaxMYNw6sR1fnrdlTANuTUMwyyr/Xjvadfo@XEnXsSOerTc1nVeZHS9XdV5udI0L9BlqNGlrlSt5zR9poX@tcoLbehaq8LQeqHp7c8f36gp1UwPjZ4PDN0Umj6pKlfpSgc001hjtilzLLB50hV9qDZrl1hW@infbA21FSN05YYut6ams5VWlaF5fYTpkP3mQQ9SxCgMTIExxkHsSKLwd8Ivru/B9yATz8Dj0eXV5y9fr4G1JmCMx@DaA1HbeAaQke9oDKMwkIX9goxlITmQJLU1GKgUhA2RBUBMklkbnQ4nKr3fx58O1qYu32vzR5Lj9xLIwmVGIYBDi84CS8@bep6PtrYHw8mYIfQw8EDy8fgfdI/xG3Adg3EUSo4doiAKb7ALUtDElYn2/OAjNvzZT1yZA5yhBPWjSB5tcuMMLOwzrC/jveQHzH8kXeYn/nhn9KKiA9OfyrjXl760evRFLXJMRRv5JYPxeDyQowFo4ughinpOkocP3sFDeweIwzsPUHanfGZD4L9lyN7R6BCI9jI@NAz6GcKPG9jcwk4WH8S6eMPqnYOPSSTJPwY0J@1lnHfBIqJcSiutLBqEsUVoAMfGkSnogL/GtyJ@jUvR2@9EeXBxfhOGzVB/VM6yQIu2AztJ1X3oHATaYYV0Jt4NpT0An7pkCm48l@hOZZFCCo2lQFlLWV9roQ/NeklgKotQYZ@wB2dvoCtEjY1UpBSuamKtUElfrUtxZ3f3dFB3maAoWCZouFgs6ZI8Y0fP4YCWV3QidedWB5eOotITxnHGe43SL/ZiQgpAThGdY7feXQ3uMIizIcMobkMYbogNqa226GXWjYm8ceKk4CAIx9THBwXr4sK3W3wn0pQkL8cjJzEZkUty9WdT1vmmMMeL6i8" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
 <p>I have finally fixed the shuffling. splitting an arbitrary length string into 4 quadrants of a square is stupidly hard. I will come back and explain more and golf a lot, but this works on any inputs, even 39 and 70 (you just have to wait a few years or something like that...)</p>
-<p>tio will finish on small numbers like 5 and 9, but even 6 is asking a bit much of it. hopefully my golfing will speed things up significantly.</p>
-<p>the formatting is even worse now, but I'll clean it up again as I golf it. sed is one of those weird languages that the more it's golfed, the more legible it gets. I'm sure even people not very familiar with sed can see that this has lots of room to golf with all the many nearly-exactly-repeated lines and duplicate commands...</p>
+<p>tio will finish on small numbers like 5 and 9, but even 6 is asking a bit much of it. hopefully my golfing will speed things up.</p>
 <p>the <code>\&amp;amp;</code> is not an html error, at this point I have started using sed to write and modify sed scripts to build this answer with and when I saw it show up inside of a command I thought it was too cute to change it back. (the actual command it's part of is <code>sa.*a\&amp;amp</code>, or more legibly written as <code>s/.*/\&amp;/mp</code>)</p>
 <p>oh yeah, if you want to check the matrices are in the right order <a href="https://tio.run/##JcsxCoAwEETRfs8hEgM6u5bmAh7AMqUiNiYYGy/vusGpPg@mbKvqTBPNlGmngsHHEwiLpbBj3znxXQOWOEZBuM2rcmXEUX58IGCEekdrM1PlN@X7SGfR/voA" rel="nofollow noreferrer">this</a> outputs matrices infinitely starting at whatever matrix you input</p>
+<p>the biggest single logical chunk, the shuffle, is 619 bytes all on its own. I think this is where the majority of the golfing can be done; I just took nearly 50 bytes out of this section with the latest edit. there are several times that I convert between unary and decimal in this section alone, so I hope to take at least some of those conversions out; as conversion is slow and this section run a lot (it's recursively called on every single candidate matrix we test until all the pieces are only 1 letter long, meaning it would be called once to check <code>1010</code>, 5 times to check <code>0000111101101001</code>, etc)</p>
+<h3><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 619 bytes</h3>
+<pre><code>s/^/\n\n/
+:d;s/\n/#&amp;/
+:e;s/^([&lt;0-9]*)#/\1&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;te
+s/\n/.{1}&amp;/2
+s/\{[0-9]*}/!/g;tc;:c;s/([0-9]*)(.*)!/\1\2{\1}/;tc
+s/(.*)\n(.*)\n(.*)/sed -r 's%^\2$%\&amp;\\n\1%;t;i\1\\n\2\n:'&lt;&lt;&lt;'\3'/e
+/\n.*\n/td
+:f;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tf;s/0//g
+s/(#+)\1/\1/
+:g;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;tg
+s/(.*)\n(.*)/sed -r 's%.{\2}%\&amp;\\n%g;i\2'&lt;&lt;&lt;'\1'/e
+:h;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;th;s/0//g
+s/#+/&amp;&amp;#/
+:i;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;ti
+s/([0-9]+)\n(.*)/sed '\1i\\\\n\\n'&lt;&lt;&lt;'\2'/e
+s/.*/sed -n '1~2H;2~2p;${x;p}'&lt;&lt;&lt;'&amp;'/e
+s/(.)\n/\1/g;y/\n/ /
+</code></pre>
+<p><a href="https://tio.run/##lZHbbqMwEIbv/RSu3JBAGga7ewqgXu87xBvJBAJWsyYCZw@K0kff7BgvTbrqRTtKzI/9z8w3pq/K87mHNUgjDZC0zHqUwALUFer1bJUni@W3KGQgeZ5zcf/h46fPX5Ys4Q@Ahlkc5nEk@YxFcRhHDyAFZLYiQ5n4yE8BCPdyXA1lTnADdWY3WbpxyX4znMVReIP1pThKfsL8DXGVo1Caywp9VdJFR6f9ZC3F7UQGEqH5JLOZxlTUQpp0muf5VN5PoSJIgGQGbEnSLXZbcWwGAUOA3/A8CCSjdOOwBJYMAZw/AagdB5uHkiMdXkntLPDma6hfjHE1QHyU4uQnmNSILzw2d9hp807W5sLK5hBgEkn1@0A1GT/G/BoWibSU7mql8YTCEfYQR34YQ6f8SXzNxJPYZ7fHX9n@NPgCb8NmeP94c24KVBTOjNqmojvVW7ptDx3VZn@wPVVdNRxoU@ofujyoHW0Pdjhqtz6lNTVtTXVHfzZ60@BaGSzRfVfWIorCGrTudHmHzvaxpzv9WKWEMJpgDMuz5vx17T3440nCKcdwR@gYNv7TF8@5wCBKFYX7@1UpUlyHP7k8nXRvGG7P6fE57pPiUqzwLf65RufLFh5Cqesaf9q91a3pz4vuLw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 101 bytes</h1>
 <pre><code>Ｎθ≔⦃⁰⟦0⟧¹⟦1⟧⦄ηＷ∧¬§ηθη«≔⦃⦄η≔ＥιλζＦζＦζＦζＦζ«≔ΣＸ⟦νμλκ⟧²ε≔⁺Ｅ§ιν⁺ξ§§ιμπＥ§ιλ⁺ξ§§ικπδ¿∨¬§ηε‹ΣΣδΣΣ§ηε§≔ηεδ»»§ηθ
