--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240818T153657Z
+"   /golfscore                                      20240818T160530Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/198491.html">Super permutations                              : 0198491</a>
 <a href="q/84260.html">Add two numbers                                 : 0084260</a>
 <a href="q/274951.html">Sum-of-four-squares grid                        : 0274951</a>
 <a href="q/275009.html">Ways to paint a backbone on a tree              : 0275009</a>
