--- a/q/198491.html
+++ b/q/198491.html
@@ -26,28 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>R</td><td>240818T160530Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/275044#275044">int 21h </a></td></tr>
-<tr d-ix="1"><td>004</td><td>Burlesque</td><td>200125T181202Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198506#198506">Mintable</a></td></tr>
-<tr d-ix="2"><td>048</td><td>Perl 5 lF</td><td>200204T232441Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198960#198960">Xcali</a></td></tr>
-<tr d-ix="3"><td>060</td><td>Ruby</td><td>200128T125424Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198598#198598">G B</a></td></tr>
-<tr d-ix="4"><td>004</td><td>Husk</td><td>200128T113835Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198596#198596">user8505</a></td></tr>
-<tr d-ix="5"><td>nan</td><td>PHP</td><td>200125T185533Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198507#198507">Guillerm</a></td></tr>
-<tr d-ix="6"><td>nan</td><td>Scratch 3.0</td><td>200126T071628Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198519#198519">lyxal</a></td></tr>
-<tr d-ix="7"><td>112</td><td>R</td><td>200126T231952Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198544#198544">MickyT</a></td></tr>
-<tr d-ix="8"><td>017</td><td>Charcoal</td><td>200126T112502Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198530#198530">Neil</a></td></tr>
-<tr d-ix="9"><td>090</td><td>JavaScript ES7</td><td>200126T101947Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198529#198529">Arnauld</a></td></tr>
-<tr d-ix="10"><td>042</td><td>PowerShell</td><td>200126T092249Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198524#198524">Andrei O</a></td></tr>
-<tr d-ix="11"><td>034</td><td>Haskell</td><td>200125T191131Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198508#198508">xnor</a></td></tr>
-<tr d-ix="12"><td>068</td><td>Python 2</td><td>200125T223507Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198513#198513">Chas Bro</a></td></tr>
-<tr d-ix="13"><td>002</td><td>Jelly</td><td>200125T153930Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198503#198503">Jonathan</a></td></tr>
-<tr d-ix="14"><td>005</td><td>Pyth</td><td>200125T151604Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198502#198502">Mr. Xcod</a></td></tr>
-<tr d-ix="15"><td>016</td><td>J</td><td>200125T145035Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198501#198501">Jonah</a></td></tr>
-<tr d-ix="16"><td>003</td><td>05AB1E</td><td>200125T134713Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198500#198500">Grimmy</a></td></tr>
-<tr d-ix="17"><td>032</td><td>Perl 6</td><td>200125T131424Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198497#198497">Jo King</a></td></tr>
-<tr d-ix="18"><td>006</td><td>05AB1E</td><td>200125T121639Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198495#198495">mabel</a></td></tr>
-<tr d-ix="19"><td>095</td><td>Python 3</td><td>200125T120006Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198493#198493">RGS</a></td></tr>
+<tr d-ix="0"><td>010</td><td>Japt</td><td>240818T181308Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/275045#275045">Shaggy</a></td></tr>
+<tr d-ix="1"><td>069</td><td>R</td><td>240818T160530Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/275044#275044">int 21h </a></td></tr>
+<tr d-ix="2"><td>004</td><td>Burlesque</td><td>200125T181202Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198506#198506">Mintable</a></td></tr>
+<tr d-ix="3"><td>048</td><td>Perl 5 lF</td><td>200204T232441Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198960#198960">Xcali</a></td></tr>
+<tr d-ix="4"><td>060</td><td>Ruby</td><td>200128T125424Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198598#198598">G B</a></td></tr>
+<tr d-ix="5"><td>004</td><td>Husk</td><td>200128T113835Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198596#198596">user8505</a></td></tr>
+<tr d-ix="6"><td>nan</td><td>PHP</td><td>200125T185533Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198507#198507">Guillerm</a></td></tr>
+<tr d-ix="7"><td>nan</td><td>Scratch 3.0</td><td>200126T071628Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198519#198519">lyxal</a></td></tr>
+<tr d-ix="8"><td>112</td><td>R</td><td>200126T231952Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198544#198544">MickyT</a></td></tr>
+<tr d-ix="9"><td>017</td><td>Charcoal</td><td>200126T112502Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198530#198530">Neil</a></td></tr>
+<tr d-ix="10"><td>090</td><td>JavaScript ES7</td><td>200126T101947Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198529#198529">Arnauld</a></td></tr>
+<tr d-ix="11"><td>042</td><td>PowerShell</td><td>200126T092249Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198524#198524">Andrei O</a></td></tr>
+<tr d-ix="12"><td>034</td><td>Haskell</td><td>200125T191131Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198508#198508">xnor</a></td></tr>
+<tr d-ix="13"><td>068</td><td>Python 2</td><td>200125T223507Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198513#198513">Chas Bro</a></td></tr>
+<tr d-ix="14"><td>002</td><td>Jelly</td><td>200125T153930Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198503#198503">Jonathan</a></td></tr>
+<tr d-ix="15"><td>005</td><td>Pyth</td><td>200125T151604Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198502#198502">Mr. Xcod</a></td></tr>
+<tr d-ix="16"><td>016</td><td>J</td><td>200125T145035Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198501#198501">Jonah</a></td></tr>
+<tr d-ix="17"><td>003</td><td>05AB1E</td><td>200125T134713Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198500#198500">Grimmy</a></td></tr>
+<tr d-ix="18"><td>032</td><td>Perl 6</td><td>200125T131424Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198497#198497">Jo King</a></td></tr>
+<tr d-ix="19"><td>006</td><td>05AB1E</td><td>200125T121639Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198495#198495">mabel</a></td></tr>
+<tr d-ix="20"><td>095</td><td>Python 3</td><td>200125T120006Z</td><td><a href="https://codegolf.stackexchange.com/questions/198491/super-permutations/198493#198493">RGS</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 69 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 10 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>There's <em>gotta</em> be a better way!</p>
+<pre><code>ÊÆp°X áX â
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ysZwsFgg4Vgg4g&amp;input=ImFiYyI" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 69 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>for(j in s&lt;-el(strsplit(scan(,q&lt;-''),q)))cat(q&lt;-outer(q,s,paste0),'')
 </code></pre>
@@ -69,7 +76,7 @@ s &lt;- el(strsplit(scan(,q),q))
 for(j in s)cat(q&lt;-outer(q,s,paste0),'')
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/FMNSSun/Burlesque" rel="nofollow noreferrer">Burlesque</a>, <s>&nbsp;5&nbsp;</s> 4 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/FMNSSun/Burlesque" rel="nofollow noreferrer">Burlesque</a>, <s>&nbsp;5&nbsp;</s> 4 bytes</h1>
 
 <pre><code>sacb
 </code></pre>
@@ -82,7 +89,7 @@ for(j in s)cat(q&lt;-outer(q,s,paste0),'')
   cb  # Get all combinations of the input characters up to the length of the input
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-lF</code>, 48 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-lF</code>, 48 bytes</h1>
 
 
 
@@ -91,7 +98,7 @@ for(j in s)cat(q&lt;-outer(q,s,paste0),'')
 
 <p><a href="https://tio.run/##K0gtyjH9/19FyVZdR906N7FAJbtaJb5WW7umpjixUic9Jz9JqdrBrVZJD0TpqKvXKlWoKLv9/5@YlPwvv6AkMz@v@L@ur6megaHBf90cNwA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 60 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 60 bytes</h1>
 
 
 
@@ -100,7 +107,7 @@ for(j in s)cat(q&lt;-outer(q,s,paste0),'')
 
 <p><a href="https://tio.run/##HYtLDkAwGAavYuX3qB6AcJHG4mtFkKBpSag6ez1WM4sZs8sz9HUoGnuBZa62XA0wlhFVjmuzdrvakgx8hr6Quzv9LInLaR2XtHBetHcQBKmIRQTgh1Qdtf/iD6@jXhxv9QA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 4 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 4 bytes</h1>
 
 <p>Total Husk novice, there may be better ways to golf this.</p>
 
@@ -115,7 +122,7 @@ for(j in s)cat(q&lt;-outer(q,s,paste0),'')
 Mπ   Map with cartesian power of input
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://php.net/" rel="nofollow noreferrer">PHP</a>, <del>176</del> <del>174</del> <del>173</del> <del>171</del> <del>170</del> 166 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://php.net/" rel="nofollow noreferrer">PHP</a>, <del>176</del> <del>174</del> <del>173</del> <del>171</del> <del>170</del> 166 bytes</h1>
 
 
 
@@ -128,7 +135,7 @@ Mπ   Map with cartesian power of input
 
 <p>Method: simply count in base N, where N is the number of unique characters in the input string.</p>
 </div>
-<div id="pu6" class="pu"><h1>Scratch 3.0, 65 blocks / <s>637</s> 632 bytes</h1>
+<div id="pu7" class="pu"><h1>Scratch 3.0, 65 blocks / <s>637</s> 632 bytes</h1>
 
 <p><a href="https://i.sstatic.net/Z2T10.png" rel="noreferrer"><img src="https://i.sstatic.net/Z2T10.png" alt="Part 1"></a></p>
 
@@ -186,7 +193,7 @@ change[j v]by(1
 
 <p><em>-5 bytes due to not being a silly billy and removing extranous spaces</em></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 112 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 112 bytes</h1>
 
 
 
@@ -214,7 +221,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 
 <p>As it is still in a list we apply <code>unlist</code> so that cat will be able to output it.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 17 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 17 bytes</h1>
 
 <pre><code>ＦＥθＸＬθ⊕κＥι✂⍘⁺ικθ¹
 </code></pre>
@@ -231,7 +238,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 
 <p>Loop from each power to double its value and perform base conversion using the input string as the alphabet, then slice off the first character.</p>
 </div>
-<div id="pu9" class="pu"><h1>JavaScript (ES7), 90 bytes</h1>
+<div id="pu10" class="pu"><h1>JavaScript (ES7), 90 bytes</h1>
 <p>Returns a Set.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;new Set([...Array(n=(L=-~s.length)**~-L)].map(_=&gt;(g=n=&gt;n?[s[n%L-1]]+g(n/L|0):'')(n--)))
@@ -257,7 +264,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 )                        // end of Set()
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 42 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 42 bytes</h1>
 
 <pre><code>($a=$args)|%{($p=$p|%{$t=$_;$a|%{$t+$_}})}
 </code></pre>
@@ -266,7 +273,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 
 <p>Expects input via <a href="https://docs.microsoft.com/en-us/powershell/module/microsoft.powershell.core/about/about_splatting" rel="nofollow noreferrer">splatting</a>.</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 34 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 34 bytes</h1>
 
 
 
@@ -302,7 +309,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 
 <p>Declares the function.</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>69</s> 68 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>69</s> 68 bytes</h1>
 
 
 
@@ -324,7 +331,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 
 <p>If empty string is not allowed...</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 2 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="noreferrer">bytes</a></h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 2 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="noreferrer">bytes</a></h1>
 <pre><code>ṗJ
 </code></pre>
 <p>A monadic Link which accepts a list of characters and returns a list of lists of lists of characters.</p>
@@ -336,14 +343,14 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 </code></pre>
 <p>If we must output a flat list of &quot;strings&quot; (lists of characters) <a href="https://tio.run/##y0rNyan8///hzuleD3f1/T/c7v3/v3piUrI6AA" rel="noreferrer" title="Jelly – Try It Online">we can add <code>Ẏ</code></a> (tighten) for the cost of a byte.</p>
 </div>
-<div id="pu14" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 5 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 5 bytes</h1>
 
 <pre><code>^LQSl
 </code></pre>
 
 <p><a href="https://pythtemp.herokuapp.com/?code=%5ELQSl&amp;input=%22abc%22&amp;debug=0" rel="nofollow noreferrer">Try it here!</a></p>
 </div>
-<div id="pu15" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 16 bytes</h1>
+<div id="pu16" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 16 bytes</h1>
 
 <pre><code>a:-.~[:,#\{@#"{&lt;
 </code></pre>
@@ -363,7 +370,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 </ul></li>
 </ul>
 </div>
-<div id="pu16" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="noreferrer">05AB1E</a>, <s>4</s> 3 bytes</h1>
+<div id="pu17" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="noreferrer">05AB1E</a>, <s>4</s> 3 bytes</h1>
 
 <p><em>-1 byte thanks to a'_'</em></p>
 
@@ -372,7 +379,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 
 <p><a href="https://tio.run/##yy9OTMpM/f//SOOjpjWHF///n5iU/B8A" rel="noreferrer" title="05AB1E – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu17" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Perl 6</a>, 32 bytes</h1>
+<div id="pu18" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Perl 6</a>, 32 bytes</h1>
 
 
 
@@ -383,7 +390,7 @@ These are feed into <code>expand.grid</code> to produce the permutations.  </p>
 
 <p>Anonymous code block that takes a string and returns a list of string including the length zero permutation.</p>
 </div>
-<div id="pu18" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 6 bytes</h1>
+<div id="pu19" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 6 bytes</h1>
 
 <pre><code>gENIã)
 </code></pre>
@@ -402,7 +409,7 @@ g      # the input
        # implicit output of the top element
 </code></pre>
 </div>
-<div id="pu19" class="pu"><h1>Python 3, 95 bytes</h1>
+<div id="pu20" class="pu"><h1>Python 3, 95 bytes</h1>
 
 <pre><code>import itertools as i;lambda s:[''.join(p)for l in range(len(s))for p in i.product(s,repeat=l)]
 </code></pre>
