--- a/q/250918.html
+++ b/q/250918.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>6511</td><td>Uiua</td><td>240726T185213Z</td><td><a href="https://codegolf.stackexchange.com/questions/250918/cartesian-polar-conversion-couple/274459#274459">nyxbird</a></td></tr>
+<tr d-ix="0"><td>6410</td><td>Uiua</td><td>240726T185213Z</td><td><a href="https://codegolf.stackexchange.com/questions/250918/cartesian-polar-conversion-couple/274459#274459">nyxbird</a></td></tr>
 <tr d-ix="1"><td>021</td><td>JCram</td><td>240724T133453Z</td><td><a href="https://codegolf.stackexchange.com/questions/250918/cartesian-polar-conversion-couple/274408#274408">Kamila S</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>Lua</td><td>230415T201340Z</td><td><a href="https://codegolf.stackexchange.com/questions/250918/cartesian-polar-conversion-couple/260118#260118">bluswimm</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>Prolog SWI</td><td>220902T081351Z</td><td><a href="https://codegolf.stackexchange.com/questions/250918/cartesian-polar-conversion-couple/251562#251562">Aiden Ch</a></td></tr>
@@ -49,15 +49,15 @@
 <tr d-ix="20"><td>nan</td><td>Mathematica</td><td>220810T181531Z</td><td><a href="https://codegolf.stackexchange.com/questions/250918/cartesian-polar-conversion-couple/250920#250920">naffetS</a></td></tr>
 <tr d-ix="21"><td>nan</td><td>Desmos</td><td>220810T181246Z</td><td><a href="https://codegolf.stackexchange.com/questions/250918/cartesian-polar-conversion-couple/250919#250919">Aiden Ch</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 6+5=11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 6+4=10 bytes</h1>
 <h3>Cartesian to polar (<code>y x -&gt; r ϕ</code>): 6 bytes</h3>
 <pre><code>⊃(⌵ℂ)∠
 </code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__ZiDihpAg4oqDKOKMteKEginiiKAKW2Ygwq8zLjQyIDIuNV0KW2Ygwq80MDAwIDMwMDBdCltmIDAgMF0KW2YgNC41NDY0OSDCrzIuMDgwNzNdCltmIDAuMDcwNzEgMC4wNzA3MV0K" rel="nofollow noreferrer">Try it!</a></p>
-<h3>Polar to cartesian (<code>ϕ r -&gt; [y x]</code>): 5 bytes</h3>
-<pre><code>×[°∠]
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_1__ZiDihpAg4oqDKOKMteKEginiiKAKW2Ygwq8zLjQyIDIuNV0KW2Ygwq80MDAwIDMwMDBdCltmIDAgMF0KW2YgNC41NDY0OSDCrzIuMDgwNzNdCltmIDAuMDcwNzEgMC4wNzA3MV0K" rel="nofollow noreferrer">Try it!</a></p>
+<h3>Polar to cartesian (<code>ϕ r -&gt; [y x]</code>): 4 bytes</h3>
+<pre><code>×⊟°∠
 </code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__ZiDihpAgw5dbwrDiiKBdCmYgwq8wLjkzOTU3IDQuMjM2MzIKZiDCrzAuOTI3MyA1MDAwCmYgMCAwCmYgMiA1CmYgMC43ODU0IDAuMQo=" rel="nofollow noreferrer">Try it!</a></p>
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_1__ZiDihpAgw5fiip_CsOKIoApmIMKvMC45Mzk1NyA0LjIzNjMyCmYgwq8wLjkyNzMgNTAwMApmIDAgMApmIDIgNQpmIDAuNzg1NCAwLjEK" rel="nofollow noreferrer">Try it!</a></p>
 <h3>Explanations</h3>
 <pre><code>⊃(⌵ℂ)∠
      ∠ # find atan of y and x (ϕ)
@@ -65,9 +65,9 @@
  (⌵ )  # the magnitude
    ℂ   # of y+xi (r)
 </code></pre>
-<pre><code>×[°∠]
- [  ] # create an array of
-  °∠  # sin(ϕ) and cos(ϕ) (un-arctangent)
+<pre><code>×⊟°∠
+ ⊟   # create an array of
+   °∠ # sin(ϕ) and cos(ϕ) (un-arctangent)
 ×     # and multiply by r
 </code></pre>
 </div>
