--- a/q/275009.html
+++ b/q/275009.html
@@ -26,12 +26,67 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>1987</td><td>Scala 3</td><td>240818T120941Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275041#275041">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>170</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>166</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="1"><td>1987</td><td>Scala 3</td><td>240818T120941Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275041#275041">138 Aspe</a></td></tr>
 <tr d-ix="2"><td>135</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
 <tr d-ix="3"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 1987 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> ... <s>170</s></sup> 166 bytes</h1>
+<p><em>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
+<em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em><br />
+<em>-5 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
+<pre class="lang-python prettyprint-override"><code>lambda g:(s:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(sum(g,[]),T),sum(L(t)+(s.count(t)&gt;1)for t in{*s}if len(t)&lt;2))[1]/2
+L=lambda t:sum(map(L,{*t}))or 1
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=hZHBbtswDIbRq59C8ElKmSxyHSc1lgJFgQEDchjQ3FRt8GIn8-DIgi0HXYM8yS69tO-0Ps0oycWaoetyoCzy_36Sys9H_cN8q9X9wx2Zk5uHzqyHs1-PVbb9mmdkk9I2ndNlOu8TV6BTOmjrxhQ5XdL9YCNW8jDc6wOs2LpuyIqUilwxYIy23ZZuQEgGSwb2sqCGndJ2tKo7ZfD7gjvEILIftIdyTapCYf59xJjg8l0ULJ77mtQabDNNF7AfmANjCHI_7dPJ57xYkyLfFG2U5d-rsjXU3VgaEPwp3Gyb3TocT_BSxlwRASwLIYmd5Ysdv8nUpqCKSSew6Q7IzlYc6E17VnRkSLgcZVoXKqc7e2NHgt2RoPsjaArTNcpqgsA2qUpV2CY1Cum4n71UGue91W4FTYtdVoFTjlpdlYaGZHhBwn4XFKPu-CEw54t1Z7B45xMuo5sS_wcRfrj8uAiBhJ8ur69DKZxwbptKsBTzz3z_dGKE4BBJEBGcYTyD2MWJlHaKKHitPIEEYwJTl7FxCjMPxK8C1s_GpAfe8PbSlx0S9Lbx_K0OscNih00dMEPAYyDOgY89nfyX9k3jFx6OdgfHg3PgkTfj47_con-4-YmmzytM_Ov_Bg" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
+<h2>Explanation</h2>
+<p>Much of the solution is based on representing the tree as a nested tuple. In this system:</p>
+<ol>
+<li>Leaf are empty tuples <code>()</code>.</li>
+<li>Non-leaf node are tuples containing the representations of its child nodes.</li>
+<li>The outermost tuple is the root.</li>
+</ol>
+<p>Examples:</p>
+<ul>
+<li><code>((), ())</code>: Root with two leaves</li>
+<li><code>((()), ())</code>: Root with a leaf and a node having one leaf</li>
+</ul>
+<p>Let <span class="math-container">\$T(X)\$</span> be the tuple representation of a tree rooted at <span class="math-container">\$X\$</span></p>
+<p>We will now define an algorithm <span class="math-container">\$L(Y)\$</span> which counts the number of unique leaves in a tree when symmetries are taken into account. It operates on <span class="math-container">\$Y\$</span>, which is <span class="math-container">\$T(X)\$</span> for some node <span class="math-container">\$X\$</span>, i.e., the nested tuple representation of a tree rooted at <span class="math-container">\$X\$</span>:</p>
+<ol>
+<li>Base case: If Y is an empty tuple <code>()</code>, return 1</li>
+<li>For non-leaf nodes:
+<ol>
+<li>Deduplicate immediate child subtrees. (since path to nodes in duplicate subtrees will same)</li>
+<li>Recursively call <span class="math-container">\$L\$</span> for each remaining child subtree.</li>
+<li>Return the sum of recursive calls.</li>
+</ol>
+</li>
+</ol>
+<p>Note that <span class="math-container">\$L(T(X))\$</span> is also the number of backbones which include the node <span class="math-container">\$X\$</span> when <span class="math-container">\$X\$</span> is a leaf.</p>
+<p>Now summing up <span class="math-container">\$L(Y)\$</span> for every unique <span class="math-container">\$T(l)\$</span> where <span class="math-container">\$l\$</span> is a leaf node, gives us something very close to double the answer since we would double count every backbone from <span class="math-container">\$u\$</span> to <span class="math-container">\$v\$</span> when <span class="math-container">\$u\$</span> and <span class="math-container">\$v\$</span> are not isomorphic, we fix this by adding 1 for every path we didn't double count and final divide by 2 to get the answer.</p>
+<h3>Commented Version</h3>
+<pre class="lang-python prettyprint-override"><code># given a tuple representation counts the number of unique paths to leaves,
+# it does this by eliminating duplicate subtrees then counting the number of leaves
+L = lambda t: sum(map(L, {*t})) or 1
+
+lambda g: (
+  s :=                            # s = tuple of tuple representations of trees rooted at every node
+    (T := lambda C, p: (*sorted(  #   recursive function to generate tuple representations (dfs)
+      T({*g[c]} - {p}, c)         #     recursively call T with parent removed from adjacent nodes
+      for c in C),)               #     for every child
+    )(sum(g,[]), T),              #   call on virtual node connected to every leaf node once and other nodes twice
+  sum(                            #
+    L(t)                          # add L(t)
+    +  (s.count(t) &gt; 1)           # add 1 if t occurs more than once in s
+    for t in {*s}                 # for every unique tuple representation t
+    if len(t) &lt; 2                 # which was generated from a leaf node
+  )                               #
+)[1] / 2                          # divide by 2 to account for double counting
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 1987 bytes</h1>
 <p>A port of <a href="https://codegolf.stackexchange.com/a/275016/110802">@Ajax1234's Python code</a> in Scala.</p>
 <p>1987 bytes, it can be golfed much more.</p>
 <hr />
@@ -180,61 +235,6 @@ object Main {
     println(countUniqueSubgraphs(List((1, 2), (2, 3), (2, 4), (4, 5), (4, 6), (6, 7), (7, 8), (7, 9))))
   }
 }
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> ... <s>171</s></sup> 170 bytes</h1>
-<p><em>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
-<em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em><br />
-<em>-5 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
-<pre class="lang-python prettyprint-override"><code>lambda g:(s:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(range(len(g)),T),sum(L(t)+(s.count(t)&gt;1)for t in{*s}if len(t)&lt;2))[1]/2
-L=lambda t:sum(map(L,{*t}))or 1
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZHBbtswDIbRa55C8ElKmSxyHSc1lgJFgQEDchjQ3DRv8GLF8-DIgi0HXYM8yS69dIe9Ufs0oyQXa4au84Gyyf_7Sco_furv5mut7u5vyYJ8vO_MZjR_-FVl2y95RoqEtsmCrpJFn7gCndBhWzdG5nRF98NCrNPDaK8PsGabuiFrUipyxYAx2mSqkLSSihaMwYpB223pkhp2Stvxuu6UwfcL7jCD2H7YHsoNsYBhb0PGBE_fhIPlU2-TWINtpukS9kNzYAxB7id-PPmUyw2ReSHbMMu_VWVrqPtiyYDgo3C7bXbjcDzBSxlzRQSwLERK7Cyf7Qp-eMVSJ7DpDsjOVhzoTXtWdGREeDrOtJYqpzv7xY4EuyNB90fQSNM1ymoGA9ukKpW0TWoU0kk_e6k0znuj3Qqayl1WgVOOW12VhgZkdEGCfhcUo-74IjDni3VnsHjrEy6jmxL_gwjeXb5fBkCCD5fX10EqnHBhm6ZgKeav-e7xxAjBIUxBhHCG8QwiF6dpaqcIBy-VpxBjjGHmMjbOYO6B6EXA-tkY98Ar3l76vEOM3jaev9YhcljksJkD5gh4DMQ58Imn4__Svmn0zMPR7uB4cA489GZ88pdb-A83P9HsaYWpv_3f" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
-<h2>Explanation</h2>
-<p>Much of the solution is based on representing the tree as a nested tuple. In this system:</p>
-<ol>
-<li>Leaf are empty tuples <code>()</code>.</li>
-<li>Non-leaf node are tuples containing the representations of its child nodes.</li>
-<li>The outermost tuple is the root.</li>
-</ol>
-<p>Examples:</p>
-<ul>
-<li><code>((), ())</code>: Root with two leaves</li>
-<li><code>((()), ())</code>: Root with a leaf and a node having one leaf</li>
-</ul>
-<p>Let <span class="math-container">\$T(X)\$</span> be the tuple representation of a tree rooted at <span class="math-container">\$X\$</span></p>
-<p>We will now define an algorithm <span class="math-container">\$L(Y)\$</span> which counts the number of unique leaves in a tree when symmetries are taken into account. It operates on <span class="math-container">\$Y\$</span>, which is <span class="math-container">\$T(X)\$</span> for some node <span class="math-container">\$X\$</span>, i.e., the nested tuple representation of a tree rooted at <span class="math-container">\$X\$</span>:</p>
-<ol>
-<li>Base case: If Y is an empty tuple <code>()</code>, return 1</li>
-<li>For non-leaf nodes:
-<ol>
-<li>Deduplicate immediate child subtrees. (since path to nodes in duplicate subtrees will same)</li>
-<li>Recursively call <span class="math-container">\$L\$</span> for each remaining child subtree.</li>
-<li>Return the sum of recursive calls.</li>
-</ol>
-</li>
-</ol>
-<p>Note that <span class="math-container">\$L(T(X))\$</span> is also the number of backbones which include the node <span class="math-container">\$X\$</span> when <span class="math-container">\$X\$</span> is a leaf.</p>
-<p>Now summing up <span class="math-container">\$L(Y)\$</span> for every unique <span class="math-container">\$T(l)\$</span> where <span class="math-container">\$l\$</span> is a leaf node, gives us something very close to double the answer since we would double count every backbone from <span class="math-container">\$u\$</span> to <span class="math-container">\$v\$</span> when <span class="math-container">\$u\$</span> and <span class="math-container">\$v\$</span> are not isomorphic, we fix this by adding 1 for every path we didn't double count and final divide by 2 to get the answer.</p>
-<h3>Commented Version</h3>
-<pre class="lang-python prettyprint-override"><code># given a tuple representation counts the number of unique paths to leaves,
-# it does this by eliminating duplicate subtrees then counting the number of leaves
-L = lambda t: sum(map(L, {*t})) or 1
-
-lambda g: (
-  s :=                            # s = tuple of tuple representations of trees rooted at every node
-    (T := lambda C, p: (*sorted(  #   recursive function to generate tuple representations (dfs)
-      T({*g[c]} - {p}, c)         #     recursively call T with parent removed from adjacent nodes
-      for c in C),)               #     for every child
-    )(range(len(g)), T),          #   generate tuple representation for a virtual node which is connected to every node
-  sum(                            #
-    L(t)                          # add L(t)
-    +  (s.count(t) &gt; 1)           # add 1 if t occurs more than once in s
-    for t in {*s}                 # for every unique tuple representation t
-    if len(t) &lt; 2                 # which was generated from a leaf node
-  )                               #
-)[1] / 2                          # divide by 2 to account for double counting
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>149</s> 135 bytes</h1>
